--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,16 @@ out/
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
+/broadcast
 
 # Docs
 docs/
 
 # Dotenv file
 .env
+
+# Ignores any lib directory
+lib/
+
+# Ignore coverage
+/coverage
